h1. CHANGELOG

h2. 1.0.20 October 7, 2011

* update gem 'cucumber-rails' from 1.0.2 to 1.1.1
* update gem 'bson_ext' from 1.3.1 to 1.4.0
* update gem 'mongoid' from 2.2.0 to 2.3.0
* update gem 'devise' from 1.4.5 to 1.4.7
* update gem 'omniauth' from 0.3.0.rc3 to 0.3.0

h2. 1.0.19 September 9, 2011

* fixed pesky HAML indent in 'navigation' recipe

h2. 1.0.18 September 9, 2011

* remove 'devise_navigation' recipe and merge with 'navigation' recipe
* update gem 'capybara' from 1.1.0 to 1.1.1
* update gem 'devise' from 1.4.4 to 1.4.5
* update gem 'omniauth' from 0.2.6 to 0.3.0.rc3
* fix indentation of 'body' tag in 'html5' recipe
* add recipe for Guard (contributed by Ashley Woodard)
* remove explicit dependency on sass gem for Rails 3.1 projects (contributed by Ashley Woodard)

h2. 1.0.17 September 2, 2011

* update gem 'factory_girl_rails' from 1.1.0 to 1.2.0
* update gem 'capybara' 1.0.1 to 1.1.0
* for 'omniauth' recipe, use OmniAuth from GitHub to avoid gem compatibility issues
* add recipe for Compass (contributed by Ashley Woodard)
* add recipe for Backbone.js (contributed by Ashley Woodard)
* use 'mysql2 ~> 0.2' for Rails 3.0 projects (contributed by Ashley Woodard)
* add ":method=>'delete'" to 'Logout' link for devise_navigation recipe

h2. 1.0.16 August 31, 2011

* update gem 'devise' from 1.4.2 to 1.4.4
* update gem 'mongoid' from 2.1.9 to 2.2.0
* improve fix for Devise/Cucumber issue https://github.com/RailsApps/rails3-devise-rspec-cucumber/issues/3

h2. 1.0.15 August 24, 2011

* update gem 'mongoid' from 2.1.5 to 2.1.9
* update gem 'capybara' 1.0.0 to 1.0.1
* update HTML5 boilerplate recipe Javascript urls for Skeleton, changed app.js to tabs.js

h2. 1.0.14 August 5, 2011

* add christopherhein's frontend-helpers gem to HTML5 recipe
* set scope for CSS stylesheets using body tag in HTML5 recipe

h2. 1.0.13 August 5, 2011

* update gem 'mongoid' from 2.0.2 to 2.1.5
* update gem 'factory_girl_rails' from 1.1.rc1 to 1.1.0