@@ -10,8 +10,8 @@ if config['mongoid']
     gem 'mongoid', '2.0.2'
   else
     # for Rails 3.1+, use optimistic versioning for gems
-    gem 'bson_ext', '>= 1.4.0'
-    gem 'mongoid', '>= 2.3.0'
+    gem 'bson_ext', '>= 1.4.1'
+    gem 'mongoid', '>= 2.3.2'
   end
 else
   recipes.delete('mongoid')
