@@ -1,5 +1,13 @@
 h1. CHANGELOG
 
+h2. 1.0.20 unreleased
+
+* update gem 'bson_ext' from 1.4.0 to 1.4.1
+* update gem 'mongoid' from 2.3.0 to 2.3.2
+* update gem 'devise' from 1.4.7 to 1.4.8
+* update gem 'factory_girl_rails' from 1.2.0 to 1.3.0
+* update gem 'rspec-rails' from 2.6.1 to 2.7.0
+
 h2. 1.0.20 October 7, 2011
 
 * update gem 'cucumber-rails' from 1.0.2 to 1.1.1
